--- a/views/general/editAdmin.hbs
+++ b/views/general/editAdmin.hbs
@@ -14,7 +14,7 @@
       <ul>
         <li><label>First name</label> <input type="text" name="firstName" id="firstName" value="{{admin.firstName}}">*
         </li>
-        <li><label>First name</label> <input type="text" name="lastName" id="lastName" value="{{admin.lastName}}"></li>
+        <li><label>Last name</label> <input type="text" name="lastName" id="lastName" value="{{admin.lastName}}"></li>
         <li><label>Email address</label> <input type="text" name="email" id="email" value="{{admin.email}}">*</li>
       </ul>
       <div class="sub-footer">
