--- a/views/partials/book.hbs
+++ b/views/partials/book.hbs
@@ -1,18 +1,20 @@
 <div class="book">
   <h1>Book unique places to stay and things to do.</h1>
-  <form action="">
+  <form method="POST" action="/room/find">
     <fieldset>
       <legend for="where"> &nbsp WHERE &nbsp</legend>
-      <input type="search" name="find" id="where" placeholder="Anywhere" >
+      <input type="search" name="location" id="location" placeholder="Anywhere" >
     </fieldset>
     <div class="in-out">
       <fieldset>
         <legend for="checkIn"> &nbsp CHECK-IN &nbsp</legend>
-        <input type="date" name="checkIn" id="checkIn" required pattern="\d{2}-\d{2}-\d{4}">
+        {{!-- <input type="date" name="checkIn" id="checkIn" required pattern="\d{2}-\d{2}-\d{4}"> --}}
+        <input type="date" name="checkIn" id="checkIn">
       </fieldset>
       <fieldset>
         <legend for="checkout"> &nbsp CHECKOUT &nbsp</legend>
-        <input type="date" name="checkOut" id="checkOut" required pattern="\d{2}-\d{2}-\d{4}" >
+        {{!-- <input type="date" name="checkOut" id="checkOut" required pattern="\d{2}-\d{2}-\d{4}" > --}}
+         <input type="date" name="checkOut" id="checkOut" >
       </fieldset>
     </div>
     <fieldset>
