--- a/views/general/userDashboard.hbs
+++ b/views/general/userDashboard.hbs
@@ -15,7 +15,7 @@
   </nav>
   <div class="info">
     <ul>
-      <li><img src="/img/users/{{user.profilePic}}"> </li>
+      {{!-- <li><img src="/img/users/{{user.profilePic}}"> </li> --}}
       <li><label>Legal name :</label> {{user.firstName}} {{user.lastName}}</li>
       <li><label>Gender :</label> {{user.gender}}</li>
       <li><label>Date of birth :</label> {{user.dateOfBirth}}</li>
