The featured rooms are appeared on the homepage

--- a/views/general/editUser.hbs
+++ b/views/general/editUser.hbs
@@ -23,7 +23,7 @@
             <option value="female">Female</option>
           </select>
         </li>
-        <li><label>Date of birth</label> <input type="date" name="dateOfBirth" id="dateOfBirth" value="{{user.dateOfBirth}}">{{user.dateOfBirth}} </li>
+        <li><label>Date of birth</label> <input type="date" name="dateOfBirth" id="dateOfBirth" value="{{user.dateOfBirth}}"> </li>
         <li><label>Email address</label> <input type="text" name="email" id="email" value="{{user.email}}">*</li>
         <li><label>Phone number</label> <input type="text" name="phoneNumber" id="phoneNumber" value="{{user.phoneNumber}}">*</li>
         <li><label>Government ID</label> <input type="text" name="governmentId" id="governmentId" value="{{user.governmentId}}"></li>
