Search room by city is implemented

--- a/views/partials/book.hbs
+++ b/views/partials/book.hbs
@@ -3,7 +3,7 @@
   <form method="POST" action="/room/find">
     <fieldset>
       <legend for="where"> &nbsp WHERE &nbsp</legend>
-      <input type="search" name="location" id="location" placeholder="Anywhere" >
+      <input type="search" name="location" id="location" placeholder="City" >
     </fieldset>
     <div class="in-out">
       <fieldset>
