--- a/views/partials/promo-rooms.hbs
+++ b/views/partials/promo-rooms.hbs
@@ -9,6 +9,7 @@
    <li><label>{{this.description}}</label></li>
    <li><label>${{this.price}} CAD / night</label></li>
    <li><label>{{this.featured}} </label></li>
+    <li><label>City : {{this.city}}</label></li>
    {{!-- <li><img src="/public/img/special-offer-sign.png" class="star-img"></li> --}}
 </ul>
 </a>
