--- a/views/rooms/list.hbs
+++ b/views/rooms/list.hbs
@@ -9,6 +9,7 @@
    </li>
    <li><label>{{this.description}}</label></li>
    <li><label>${{this.price}} CAD / night</label></li>
+   <li><label>City : {{this.city}}</label></li>
 </ul>
 </a>
 {{/each}}
