--- a/views/rooms/roomlisting.hbs
+++ b/views/rooms/roomlisting.hbs
@@ -1,4 +1,4 @@
-<div class="room">
+{{!-- <div class="room">
 {{#each rooms }}
 <ul class="room-info zoom">
    <li><img src={{this.roomImg}}></li>
@@ -7,8 +7,9 @@
    </li>
    <li><label>{{this.description}}</label></li>
    <li><label>${{this.price}} CAD / night</label></li>
+    <li><label>City : {{this.city}}</label></li>
 </ul>
 {{/each}}
 </div>
 {{!-- <div class="pagenumbers" id="pagination"></div><br> --}}
-
+ --}}
