--- a/views/rooms/infoRoom.hbs
+++ b/views/rooms/infoRoom.hbs
@@ -8,7 +8,7 @@
       </li>
       <li><label>{{description}}</label></li>
       <li><label>${{price}} CAD / night</label></li>
-      <li><label>${{city}}, {{province}}, {{country}} </label></li>
+      <li><label>{{city}}, {{province}}, {{country}} </label></li>
       <li><label>Check-in</label><input type="date" name="checkIn" id="checkIn"></li>
       <li><label>Check-out</label><input type="date" name="checkOut" id="checkOut"></li>
  
