--- a/public/css/admin-user.css
+++ b/public/css/admin-user.css
@@ -22,12 +22,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   text-align: center;
-
-  /* text-align: right;
-  justify-content: right;
-  justify-items: right;
-  align-items: flex-end;
-  align-content: flex-end; */
+ 
 
 }
 
@@ -47,6 +42,7 @@
   background-color:var(--light);
   color: var(--dark);
   border-color: var(--light);
+  border: solid 1px black;
 }
 
 .sub-footer{
