--- a/views/general/adminLogin.hbs
+++ b/views/general/adminLogin.hbs
@@ -1,8 +1,9 @@
 <div class="login">
-  {{!-- {{#each messages}}
-  <div class="errors">{{>contactus-response}}</div>
-  {{/each}} --}}
+<div class="errors">
+{{>contactus-response}}
+</div>
     {{#each messages}}
+    
   <div class="errors">{{this}}</div>
   {{/each}}
   <h1>{{headingInfo}}</h1>
