--- a/views/general/login.hbs
+++ b/views/general/login.hbs
@@ -20,5 +20,5 @@
   <p>Forgot your password? <a href="#">Click here to reset it</a>.</p>
 </div>
 <div class="sign-up-help">
-  <p>Don’t have an account? <a href="/signup">Sign up</a></p>
+  <p>Don’t have an account? <a href="/user/signup">Sign up</a></p>
 </div>
