--- a/public/css/room.css
+++ b/public/css/room.css
@@ -106,17 +106,40 @@ h3{
   
 }
 
-.sub-footer-std ul{
-  display: flex;
-  padding: 1rem 0;
+.btn{
+  display: grid;
+  width: fit-content;
+  background-color: var(--dark);
+  border-radius: 0.25rem;
+  margin: 0.5rem;
+  font-size: 1.25rem;
+  font-weight: bold;
 
 }
 
+/* .btn a:hover{
+
+  background-color: var(--dark);
+  color: var(--light);
+
+  border-radius: 0.25rem;
+
+}
+
+.btn a{
+  background-color:var(--light);
+  color: var(--dark);
+  border-color: var(--light);
+  border: solid 1px black;
+  padding: 0.5rem;
+} */
+
+/* 
 .sub-footer-std li{
   padding:0 0.5rem 0 0.5rem;
-}
+} */
 
-.sub-footer-std a{
+/* .sub-footer-std a{
   padding: 0.5rem;
   border: solid 0.5px;
   background-color: yellow;
@@ -125,7 +148,7 @@ h3{
   font-weight: bold;
   border-radius: 0.25rem;
 
-}
+} */
 
 /* MEDIA QUERIES */
 @media(min-width: 600px){
@@ -133,6 +156,7 @@ h3{
     grid-template-columns: repeat(2, 1fr);
   }
 
+  
   .star-img{
     width: 100%;
     max-width: 22%;
