--- a/views/general/editAdmin.hbs
+++ b/views/general/editAdmin.hbs
@@ -4,8 +4,8 @@
   </div>
   <nav class="sub-nav">
     <ul>
-      <li><a href="/rooms/add">Add Room</a></li>
-      <li><a href="/rooms/edit">Edit Room</a></li>
+      <li><a href="/admin/room/add">Add Room</a></li>
+      <li><a href="/admin/room/list">List Room</a></li>
       <li><a href="/admin/logout">Logout </a></li>
     </ul>
   </nav>
