--- a/views/rooms/adminListRoom.hbs
+++ b/views/rooms/adminListRoom.hbs
@@ -5,36 +5,30 @@
   </div>
   <nav class="sub-nav">
     <ul>
-       <li><a href="/admin/dashboard">Dashboard</a></li>
+      <li><a href="/admin/dashboard">Dashboard</a></li>
       <li><a href="/admin/room/add">Add Room</a></li>
       <li><a href="/admin/logout">Logout </a></li>
     </ul>
   </nav>
-  {{#each data }}
-  <div class="room-std">
-    <ul class="room-info-std">
+
+  <div class="room">
+    {{#each data }}
+
+    <ul class="room-info">
       <li><img src="/public/img/rooms/{{this.roomPic}}"></li>
-      {{!-- <li class="top-room-info-std">
+      <li class="top-room-info">
         <h3>{{this.title}}</h3>
       </li>
       <li><label>{{this.description}}</label></li>
-      <li><label>${{this.price}} CAD / night</label></li> --}}
-      <li><label>Title : </label>{{this.title}}</li>
-      <li><label>Description : </label>{{this.description}}</li>
-      <li><label>Price : </label>$ {{this.price}} CAD / night</li>
-      <li><label>Address : </label>{{this.address}}</li>
-      <li><label>City : </label>{{this.city}}</li>
-      <li><label>Province : </label>{{this.province}}</li>
-      <li><label>Country  :</label>{{this.country}}</li>
+      <li><label>${{this.price}} CAD / night</label></li>
+      <li><label>City : {{this.city}}</label></li>
+      <li><label>Province : {{this.province}}</label></li>
+      <li><label>Country :</label>{{this.country}}</li>
       <li><label>Status : </label>{{this.status}}</li>
+      <li class="btn"><a href="/admin/room/edit/{{this.id}}">Edit</a></li>
+      <li class="btn"><a href="/admin/room/delete/{{this.id}}?method=DELETE">Delete</a></li>
     </ul>
-    <div class="sub-footer-std">
-      <ul>
-        <li><a href="/admin/room/edit/{{this.id}}">Edit</a></li>
-        <li><a href="/admin/room/delete/{{this.id}}?method=DELETE" >Delete</a></li>
-      </ul>
-    </div>
-    
+
+    {{/each}}
   </div>
-  {{/each}}
 </div>
